add CD workflow to generate the jar files